
[package]
name = "pumpfactory"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.0"
cw-storage-plus = "0.12"
cw2 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true